[package]
name = "token-list"
version = "0.0.0"
authors = ["William Myers <will@telco.in>"]
description = "Ethereum token list standard"
edition = "2018"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
url = { version = "2", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0.64"

[package.metadata.release]
no-dev-version = true
pre-release-commit-message = "chore: release v{{version}}"
tag-message = "{{crate_name}} v{{version}}"
# IMPORTANT: remember to update the changelog before releasing
pre-release-replacements = [
    { file = "CHANGELOG.md", search = '## \[Unreleased\].*', replace = "### [v{{version}}](https://github.com/telcoin/token-list/compare/v{{prev_version}}...v{{version}}) ({{date}})", min = 0, prerelease = true },
    { file = "CHANGELOG.md", search = '#{2,4} Fixes', replace = "#### Fixes", min = 0, prerelease = true },
    { file = "CHANGELOG.md", search = '#{2,4} Features', replace = "#### Features", min = 0, prerelease = true },
]
