[package]
name = "token-list"
version = "0.3.0"
authors = ["William Myers <will@telco.in>"]
description = "Ethereum token list standard"
repository = "https://github.com/telcoin/token-list.git"
license = "MIT"
keywords = ["ethereum", "ERC20", "cryptocurrency"]
categories = ["cryptography::cryptocurrencies"]
edition = "2018"

[features]
from-uri = ["reqwest", "thiserror"]
from-uri-compat = ["futures", "futures01", "reqwest09", "thiserror"]

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
futures = { version = "0.3.13", features = ["compat"], optional = true }
futures01 = { package = "futures", version = "0.1.25", optional = true }
reqwest = { version = "0.11.4", features = ["json"], optional = true }
reqwest09 = { package = "reqwest", version = "0.9.24", optional = true }
semver = "0.9.0"
serde = { version = "1", features = ["derive"] }
thiserror = { version = "1", optional = true }
url = { version = "2", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0.64"
tokio01 = { package = "tokio", version = "0.1.22" }
tokio = { version = "1.8.0", features = ["rt", "rt-multi-thread", "macros"] }

[package.metadata.release]
no-dev-version = true
pre-release-commit-message = "chore: release v{{version}}"
tag-message = "{{crate_name}} v{{version}}"
# IMPORTANT: remember to update the changelog before releasing
pre-release-replacements = [
    { file = "CHANGELOG.md", search = '## \[Unreleased\].*', replace = "### [v{{version}}](https://github.com/telcoin/token-list/compare/v{{prev_version}}...v{{version}}) ({{date}})", min = 0, prerelease = true },
    { file = "CHANGELOG.md", search = '#{2,4} Fixes', replace = "#### Fixes", min = 0, prerelease = true },
    { file = "CHANGELOG.md", search = '#{2,4} Features', replace = "#### Features", min = 0, prerelease = true },
]
